Minor Admin GUI updates for style uniformity

--- a/src/app/components/admin/admin-core/admin-privacy-policy/admin-privacy-policy.component.html
+++ b/src/app/components/admin/admin-core/admin-privacy-policy/admin-privacy-policy.component.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="offset-md-10">
             <a [routerLink]="['/admin/settings']" class="btn btn-default">
-                <i class="fal fa-wrench"></i>&nbsp;Settings
+                <i class="fa fa-wrench"></i>&nbsp;Settings
             </a>
         </div>
     </div>
