--- a/src/app/components/admin/admin-core/admin-reset-password/admin-reset-password.component.html
+++ b/src/app/components/admin/admin-core/admin-reset-password/admin-reset-password.component.html
@@ -31,7 +31,7 @@
                         </div>
 
                         <button type="submit"
-                                class="btn btn-primary"
+                                class="btn btn-secondary full-width"
                                 [disabled]="!resetForm.valid">
                             <i class="fa fa-share-square"></i>&nbsp;Send
                         </button>
