--- a/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
+++ b/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
@@ -95,7 +95,8 @@
                         </div>
 
                         <button type="submit"
-                                class="btn btn-primary"><i class="fa fa-paper-plane"></i>&nbsp;Signup
+                                class="btn btn-secondary full-width">
+                            <i class="fa fa-paper-plane"></i>&nbsp;Signup
                         </button>
 
                         <div class="form-group mt-5">
