--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -141,7 +141,7 @@
                         </span>
                         </td>
                         <td style="text-align:center;">
-                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
+                            <a class="btn btn-default btn-md icon-btn md-btn-flat user-tooltip"
                                [routerLink]="['/admin/pages/', page.url]">
                                 <i class="fa fa-pencil"></i>&nbsp;
                             </a>
