--- a/src/app/components/admin/admin-press-release/admin-press-release-list/admin-press-release-list.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-list/admin-press-release-list.component.html
@@ -58,8 +58,8 @@
                                 {{ pressRelease.publishOn | date:'shortDate' }}
                             </a>
                         </td>
-                        <td>
-                            <a class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip"
+                        <td style="text-align:center;">
+                            <a class="btn btn-default btn-md icon-btn md-btn-flat user-tooltip"
                                [routerLink]="['/admin/press-releases/', pressRelease.url]">
                                 <i class="fa fa-pencil"></i>&nbsp;
                             </a>
