--- a/src/app/components/admin/admin-core/admin-ads/admin-ads.component.html
+++ b/src/app/components/admin/admin-core/admin-ads/admin-ads.component.html
@@ -86,7 +86,7 @@
                         </div>
 
 
-                        <button type="submit" class="btn btn-secondary mb-5">
+                        <button type="submit" class="btn btn-secondary mb-5 full-width">
                             <i class="fa fa-money-bill-wave"></i>&nbsp;Save Ads
                         </button>
 
