--- a/src/app/components/admin/admin-core/admin-files/admin-files.component.css
+++ b/src/app/components/admin/admin-core/admin-files/admin-files.component.css
@@ -42,6 +42,10 @@ code {
     float: right;
 }
 
+button.btn.search {
+    border: 1px solid rgb(206, 212, 218);
+}
+
 .details {
     z-index: 1000;
 }
