--- a/src/app/components/admin/admin-core/admin-files/admin-files.component.html
+++ b/src/app/components/admin/admin-core/admin-files/admin-files.component.html
@@ -15,10 +15,10 @@
 </div>
 
 <!-- * Nav buttons * -->
-<div class="row m-4 pl-5">
+<div class="row m-4">
     <div class="container">
-        <div class="text-right mr-5">
-            <div class="btn-group btn-group-md float-right"
+        <div class="text-center">
+            <div class="btn-group btn-group-md"
                  role="group"
                  aria-label="Basic example">
                 <a [routerLink]="['/admin/file-uploader']" class="btn btn-default">
@@ -39,7 +39,7 @@
 
 <div class="row">
     <div class="container">
-        <div class="col-md-10 offset-md-1">
+        <div class="col-md-8 offset-md-2">
             <div class="card mb-4">
                 <h6 class="card-header">
                     Search Files
@@ -55,7 +55,7 @@
                                            [(ngModel)]="searchTerm"
                                            (keydown)="search($event)">
                                     <span class="input-group-append">
-                                  <button class="btn btn-secondary" type="button">
+                                  <button class="btn btn-default search" type="button">
                                       <i class="fa fa-search"></i>&nbsp;Search
                                   </button>
                                 </span>
@@ -74,7 +74,6 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-body">
-                <p class="p-1 tip"><i class="fa fa-info-circle"></i> You can click any file to copy it's URL</p>
                 <div class="offset-md-9">
                     <mat-form-field>
                         <mat-select [(ngModel)]="selectedViewNumber"
@@ -87,6 +86,7 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
+                <p class="p-1 tip"><i class="fa fa-info-circle"></i> You can click any file to copy it's URL</p>
                 <div class="card inner-card bg-lighter">
                     <div class="card-body">
                         <ng-template #loading>
