--- a/src/app/components/admin/admin-core/admin-images/admin-images.component.css
+++ b/src/app/components/admin/admin-core/admin-images/admin-images.component.css
@@ -44,6 +44,10 @@ code {
     float: right;
 }
 
+button.btn.search {
+    border: 1px solid rgb(206, 212, 218);
+}
+
 .details {
     z-index: 1000;
 }
