--- a/src/app/components/admin/admin-core/admin-login/admin-login.component.html
+++ b/src/app/components/admin/admin-core/admin-login/admin-login.component.html
@@ -48,7 +48,7 @@
                         </div>
 
                         <button type="submit"
-                                class="btn btn-primary">
+                                class="btn btn-secondary full-width">
                             <i class="fa fa-unlock"></i>&nbsp;Login
                         </button>
                     </form>
