--- a/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
+++ b/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
@@ -147,7 +147,7 @@
                         </div>
 
 
-                        <button type="submit" class="btn btn-secondary mb-5">
+                        <button type="submit" class="btn btn-secondary mb-5 full-width">
                             <i class="fa fa-chart-line"></i>&nbsp;Save Meta
                         </button>
 
