--- a/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.html
+++ b/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.html
@@ -39,7 +39,7 @@
 </div>
 
 <!-- * Custom Links Edit * -->
-<div class="row">
+<div class="row mb-5">
     <div class="container">
         <div class="card">
             <div class="card-body">
