--- a/src/app/components/admin/admin-page-card/admin-page-card-edit/admin-page-card-edit.component.html
+++ b/src/app/components/admin/admin-page-card/admin-page-card-edit/admin-page-card-edit.component.html
@@ -18,7 +18,7 @@
 </div>
 
 
-<div class="container" [@simpleFadeAnimation]="'in'">
+<div class="container mb-5" [@simpleFadeAnimation]="'in'">
     <div class="row">
         <div class="col-md-6">
             <div class="card">
