--- a/src/app/components/admin/admin-page-card/admin-page-card-new/admin-page-card-new.component.html
+++ b/src/app/components/admin/admin-page-card/admin-page-card-new/admin-page-card-new.component.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container mb-5">
     <div class="row">
         <div class="col-md-6">
             <div class="card">
@@ -33,6 +33,19 @@
                             <form [formGroup]="newPageCardForm"
                                   (ngSubmit)="onCreateCard(newPageCardForm.value)">
                                 <div class="form-group">
+
+                                    <div class="form-group">
+                                        <label>Image URL
+                                            <small>(Image at the top of card)</small>
+                                        </label>
+                                        <input type="url"
+                                               class="form-control"
+                                               [class.invalid]="!f.photoURL.valid && f.photoURL.touched"
+                                               [(ngModel)]="card.photoURL"
+                                               formControlName="photoURL">
+                                    </div>
+
+
                                     <label>Title</label>
                                     <input type="text"
                                            class="form-control"
@@ -71,17 +84,6 @@
                                            formControlName="url">
                                 </div>
 
-
-                                <div class="form-group">
-                                    <label>Image URL
-                                        <small>(Image at the top of card)</small>
-                                    </label>
-                                    <input type="url"
-                                           class="form-control"
-                                           [class.invalid]="!f.photoURL.valid && f.photoURL.touched"
-                                           [(ngModel)]="card.photoURL"
-                                           formControlName="photoURL">
-                                </div>
 
                                 <!-- * ExtURL  * -->
                                 <div class="form-group mt-3">
@@ -125,7 +127,8 @@
                 </div>
                 <ng-template #cardPreview>
                     <div class="text-center p-4">
-                        <i class="fal fa-spinner-third fa-spin"></i>
+                        <img src="https://s3.amazonaws.com/DDW/ddw-org/images/gifs/ajax-loader-transp.gif" alt="Waiting">
+                        <!--<i class="fal fa-spinner-third fa-spin"></i>-->
                         <p class="card-preview">
                             Card will appear here...
                         </p>
