--- a/src/styles.css
+++ b/src/styles.css
@@ -45,9 +45,9 @@ hr.inset-hr {
 }
 
 h1.admin-badge, h1.admin-badge > i.fa {
-    background-color: #848484;
+    background-color: #6E6E6E;
     color: transparent;
-    text-shadow: 0 1px 2px rgba(255, 255, 255, 0.4);
+    text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
