--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -42,6 +42,14 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row m-3">
+                        <div class="container">
+                            <div class="text-center">
+                                <a href="#" class="btn btn-warning btn-lg">Submit Abstract</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -259,4 +267,4 @@
 </div>
 
 <!-- * FOOTER * -->
-<ddw-footer></ddw-footer>
+<ddw-footer *ngIf="homePage"></ddw-footer>
