--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.html
@@ -22,19 +22,19 @@
                             <div class="btn-group float-right mb-5"
                                  role="group"
                                  aria-label="Basic example">
-                                <a class="btn btn-default btn-sm text-dark"
-                                   [routerLink]="['/admin/contacts']">
-                                    <i class="fa fa-undo"></i>&nbsp;Cancel
-                                </a>
-                                <a class="btn btn-warning btn-sm text-dark"
+                                <a class="btn btn-default btn-sm"
                                    *ngIf="!contact.viewed"
                                    (click)="onMarkViewed(contact.$key)">
-                                    <i class="fa fa-glasses"></i> Viewed
+                                    <i class="fal fa-square"></i> Viewed
                                 </a>
-                                <a class="btn btn-outline-warning btn-sm text-dark"
+                                <a class="btn btn-default btn-sm viewed-btn"
                                    *ngIf="contact.viewed"
                                    (click)="onUnmarkViewed(contact.$key)">
-                                    <i class="fa fa-times"></i> Viewed
+                                    <i class="fa fa-check-square"></i> Viewed
+                                </a>
+                                <a class="btn btn-secondary btn-sm"
+                                   [routerLink]="['/admin/contacts']">
+                                    <i class="fa fa-undo"></i>&nbsp;Cancel
                                 </a>
                                 <a class="btn btn-danger btn-sm text-white"
                                    (click)="onDeleteContact(contact.$key)">
@@ -46,7 +46,7 @@
 
                     <div class="row">
                         <div class="col-sm-12 text-center">
-                            <h3 class="alert alert-warning" *ngIf="contact.viewed">
+                            <h3 class="alert alert-light" *ngIf="contact.viewed">
                                 <i class="fa fa-check-square"></i>&nbsp;Viewed
                             </h3>
                         </div>
@@ -58,28 +58,28 @@
                                 <tbody>
                                 <tr>
                                     <th scope="col">From:</th>
-                                    <td class="text-dark">
+                                    <td class="">
                                         <i class="fa fa-user-alt"></i>&nbsp;
                                         {{ contact.firstName }} {{ contact.lastName }}
                                     </td>
                                 </tr>
                                 <tr>
                                     <th scope="col">ID:</th>
-                                    <td class="text-dark">
+                                    <td class="">
                                         <i class="fa fa-ticket-alt"></i>&nbsp;<span class="text-mono">
                                         {{ contact.$key }}
                                         </span>
                                     </td>
                                 </tr>
                                 <!--<tr>-->
-                                    <!--<th scope="col">Program:</th>-->
-                                    <!--<td class="text-dark">-->
-                                       <!--<i class="fa fa-code-branch"></i>&nbsp; {{ contact.programType }}-->
-                                    <!--</td>-->
+                                <!--<th scope="col">Program:</th>-->
+                                <!--<td class="text-dark">-->
+                                <!--<i class="fa fa-code-branch"></i>&nbsp; {{ contact.programType }}-->
+                                <!--</td>-->
                                 <!--</tr>-->
                                 <tr>
                                     <th scope="col">Send Date:</th>
-                                    <td class="text-dark"><i class="fa fa-clock"></i>&nbsp; {{ contact.sentDate |
+                                    <td class=""><i class="fa fa-clock"></i>&nbsp; {{ contact.sentDate |
                                         date:'medium' }}
                                     </td>
                                 </tr>
@@ -87,7 +87,8 @@
                                     <th scope="col">Phone Number:</th>
                                     <td>
                                         <a href="tel:{{ contact.phoneNumber }}"
-                                           class="text-decoration-none text-dark">
+                                           class="text-decoration-none"
+                                           [ngClass]="{'viewed-link': contact.viewed, 'text-dark': !contact.viewed}">
                                             <i class="fa fa-phone"></i>&nbsp; {{ contact.phoneNumber }}
                                         </a>
                                     </td>
@@ -96,7 +97,8 @@
                                     <th scope="col">Email:</th>
                                     <td>
                                         <a href="mailto:{{ contact.email }}?subject=DDW® Contact"
-                                           class="text-decoration-none text-dark">
+                                           class="text-decoration-none"
+                                           [ngClass]="{'viewed-link': contact.viewed, 'text-dark': !contact.viewed}">
                                             <i class="fa fa-envelope"></i>&nbsp; {{ contact.email }}
                                         </a>
                                     </td>
@@ -121,7 +123,7 @@
                     <div class="card mt-3 bg-lighter">
                         <div class="card-body">
                             <h6 class="card-title">
-                              <i class="fa fa-align-left"></i>&nbsp; Body:
+                                <i class="fa fa-align-left"></i>&nbsp; Body:
                             </h6>
                             <p class="card-text p-3">
                                 {{ contact.body }}
