Updated README.md and removed firebase function logs

--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-list/admin-contact-us-list.component.html
@@ -74,7 +74,7 @@
                         <td scope="col" class="text-truncate">
                             {{ contact.sentDate | date:'medium' }}
                         </td>
-                        <td class="text-center">
+                        <td scope="col" class="text-center">
                             <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip ml-2 mt-1"
                                *ngIf="!contact.viewed"
                                matTooltip="Mark as viewed"
