Made some CSS mobile media queries for better mobile viewing

--- a/src/app/components/admin/admin-press-release/admin-press-release-item/admin-press-release-item.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-item/admin-press-release-item.component.html
@@ -1,7 +1,14 @@
 <!-- * ADMIN-PRESS-RELEASE-ITEM * -->
-<p class="divider"></p>
-<h3><a [routerLink]="['/news/press-releases/', pressRelease.url]" class="title-link">{{ pressRelease.title}}</a></h3>
-<p class="publish-on">
-    {{ pressRelease.publishOn | date:'fullDate' }}
-</p>
-<p [innerHTML]="pressRelease.summary | safeHtml"></p>
+<div class="press-release-item">
+    <p class="divider"></p>
+    <h3>
+        <a [routerLink]="['/news/press-releases/', pressRelease.url]"
+           class="title-link">
+            {{ pressRelease.title}}
+        </a>
+    </h3>
+    <p class="publish-on">
+        {{ pressRelease.publishOn | date:'fullDate' }}
+    </p>
+    <p [innerHTML]="pressRelease.summary | safeHtml"></p>
+</div>
