--- a/src/app/components/pages/attendee-planning/attendee-planning.component.css
+++ b/src/app/components/pages/attendee-planning/attendee-planning.component.css
@@ -95,3 +95,13 @@ a.btn.btn-warning.btn-lg:hover {
     padding: 0.5em 2em;
     font-size: 18px;
 }
+
+/*------------------------------------------------
+     Mobile
+------------------------------------------------*/
+
+@media only screen and (max-width: 991px) {
+    h1.title {
+        visibility: hidden;
+    }
+}
