--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="row crumbs">
-        <div class="container pl-0">
+        <div class="container-fluid body-container" style="max-width:1200px;">
             <ol class="breadcrumb pl-0">
                 <li class="breadcrumb-item">
                     <div class="text-capitalize text-decoration-none text-dark">
@@ -177,7 +177,7 @@
     </div>
 
     <div class="row crumbs">
-        <div class="container">
+        <div class="container-fluid body-container" style="max-width:1200px;">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
                     <a [routerLink]="['/home']">{{ newsTitle }}</a>
