--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -21,8 +21,8 @@
     </div>
 
     <div class="row crumbs">
-        <div class="container pl-0">
-            <ol class="breadcrumb pl-0">
+        <div class="container-fluid body-container" style="max-width:1200px;">
+            <ol class="breadcrumb">
                 <li class="breadcrumb-item">
                     <div class="text-capitalize text-decoration-none text-dark">
                         {{ page.category }}
