--- a/src/app/components/admin/admin-press-release/admin-press-release-item/admin-press-release-item.component.css
+++ b/src/app/components/admin/admin-press-release/admin-press-release-item/admin-press-release-item.component.css
@@ -30,3 +30,14 @@ p {
     font-weight: 500;
     font-size: 18px;
 }
+
+/*------------------------------------------------
+     Mobile
+------------------------------------------------*/
+
+@media only screen and (max-width: 991px) {
+    .press-release-item {
+        margin: 0 10px;
+    }
+
+}
