--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -22,19 +22,19 @@
                                     <tr>
                                         <td class="text-center circles">
                                             <div class="days"><h1 class="time">{{time1.days}}</h1></div>
-                                            <h6 class="time">Days</h6>
+                                            <h6 class="time-mes">Days</h6>
                                         </td>
                                         <td class="text-center circles">
                                             <div class="hours"><h1 class="time">{{time1.hours}}</h1></div>
-                                            <h6 class="time">Hours</h6>
+                                            <h6 class="time-mes">Hours</h6>
                                         </td>
                                         <td class="text-center circles">
                                             <div class="minutes"><h1 class="time">{{time1.minutes}}</h1></div>
-                                            <h6 class="time">Minutes</h6>
+                                            <h6 class="time-mes">Minutes</h6>
                                         </td>
                                         <td class="text-center circles">
                                             <div class="seconds"><h1 class="time">{{time1.seconds}}</h1></div>
-                                            <h6 class="time">Seconds</h6>
+                                            <h6 class="time-mes">Seconds</h6>
                                         </td>
                                     </tr>
                                     </tbody>
@@ -82,7 +82,7 @@
 <!-- * Cards * -->
 <div class="row cards" *ngIf="homePage && !homePage.cardsHidden">
     <div class="container">
-        <div class="row">
+        <div class="row ml-1 mr-1">
             <ddw-admin-cards
                     class="col-md-4"
                     *ngFor="let cardEl of cards$ | async"
@@ -113,7 +113,7 @@
                 </iframe>
             </div>
         </div>
-        <div class="row text-center">
+        <div class="row text-center ml-1 mr-1">
             <h5 [innerHTML]="homePage.videoSubtitle"></h5>
         </div>
     </div>
@@ -130,7 +130,7 @@
 
 <div class="row blog-posts" *ngIf="homePage && !homePage.postsHidden">
     <div class="container">
-        <div class="row" *ngIf="featuredPosts$">
+        <div class="row ml-1 mr-1" *ngIf="featuredPosts$">
             <ddw-admin-featured-blog-posts
                     class="col-md-4"
                     *ngFor="let postEl of featuredPosts$ | async"
@@ -158,7 +158,7 @@
     </div>
 </div>
 
-<div class="row" *ngIf="homePage && homePage.hasCalendar">
+<div class="row mb-5 ml-1 mr-1" *ngIf="homePage && homePage.hasCalendar">
     <div class="container-fluid">
         <ddw-admin-calendar-item
                 *ngFor="let calEl of calendars$ | async"
@@ -267,7 +267,9 @@
 <div class="row" *ngIf="footerbar">
     <div class="container">
         <div class="text-center">
-            <div [innerHTML]="footerbar | safeHtml" runScripts id="myAdSpace"></div>
+            <div [innerHTML]="footerbar | safeHtml"
+                 runScripts
+                 id="myAdSpace"></div>
         </div>
     </div>
 </div>
