--- a/src/app/components/pages/presenters/presenters.component.html
+++ b/src/app/components/pages/presenters/presenters.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="row crumbs">
-        <div class="container pl-0">
+        <div class="container-fluid body-container" style="max-width:1200px;">
             <ol class="breadcrumb pl-0">
                 <li class="breadcrumb-item">
                     <div class="text-capitalize text-decoration-none text-dark">
