--- a/src/styles.css
+++ b/src/styles.css
@@ -63,7 +63,7 @@ a:link.child {
     text-decoration: underline;
 }
 
-.image-uploader > * p  {
+.image-uploader > * p {
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
     font-size: 14px;
     line-height: 1.5;
@@ -294,10 +294,10 @@ a.btn.btn-warning.btn-lg:hover {
 
 .btn.btn-clear {
     background: transparent;
-    color: #fff;
     border: 2px solid #fff;
+    color: #fff;
     font-size: 18px;
-    padding: .5em 2em;
+    padding: .6em 2em;
     margin: 1.5em;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
@@ -307,7 +307,7 @@ a.btn.btn-warning.btn-lg:hover {
 
 .btn.btn-clear:hover {
     background-color: #F47700;
-    border: 0 none;
+    border: 2px solid #fff;
     color: #fff;
     font-size: 18px;
     padding: .6em 2em;
@@ -366,14 +366,18 @@ p.quoteby {
     max-width: 100%;
 }
 
-.body-cotainer p {
+.body-container p {
     text-align: left;
 }
 
-h1, h2, h3, h4 {
+h1, h3, h4 {
     margin-top: 20px;
     margin-bottom: 10px;
     font-weight: bold;
+}
+
+h2 {
+    margin-top: 0;
 }
 
 /* Cards */
@@ -393,7 +397,7 @@ p.text-center > a.btn-warning {
 
 .col-quote blockquote {
     background-color: transparent;
-    border-left: 0px;
+    border-left: 0;
     color: #fff;
     margin-bottom: 1em;
 }
@@ -413,7 +417,7 @@ p.text-center > a.btn-warning {
 }
 
 .col-media {
-    padding: 0px;
+    padding: 0;
     line-height: 0;
 }
 
@@ -429,7 +433,7 @@ p.text-center > a.btn-warning {
 
 blockquote {
     background-color: transparent;
-    border-left: 0px;
+    border-left: 0;
     color: #fff;
     margin-bottom: 1em;
     line-height: 2;
@@ -496,89 +500,9 @@ table.ddw1 td {
     line-height: 24px;
 }
 
-/* Colin's Searchbar updates */
-/*.cse .gsc-control-cse, .gsc-control-cse {*/
-/*font-family: Arial, sans-serif;*/
-/*background-color: transparent !important;*/
-/*border: transparent !important;*/
-/*}*/
 
-/*button.gsc-search-button.gsc-search-button-v2 {*/
-/*font-size: 0px;*/
-/*padding: 6px 27px;*/
-/*width: auto;*/
-/*vertical-align: middle;*/
-/*border: transparent;*/
-/*border-radius: 2px;*/
-/*-moz-border-radius: 2px;*/
-/*-webkit-border-radius: 2px;*/
-/*margin-top: 2px;*/
-/*!* border-color: #000; *!*/
-/*background-color: transparent;*/
-/*!* background-image: -webkit-gradient(linear,left top,left bottom,from(#333333),to(#333333)); *!*/
-/*background-image: none;*/
-/*}*/
-
-/*!* Use a different font family for search results *!*/
-/*.gs-title, .gs-snippet {*/
-/*font-family: "Helvetica Neue", sans-serif;*/
-/*}*/
-
-/*!* Add a border between individual search results *!*/
-/*.gs-webResult {*/
-/*border: transparent;*/
-/*padding: 1em;*/
-/*}*/
-
-/*!* Do no display the count of search results *!*/
-/*.gsc-result-info {*/
-/*display: none;*/
-/*}*/
-
-/*!* Hide the Google branding in search results *!*/
-/*.gcsc-branding {*/
-/*display: none;*/
-/*}*/
-
-/*!* Hide the thumbnail images in search results *!*/
-/*.gsc-thumbnail {*/
-/*display: none;*/
-/*}*/
-
-/*!* Hide the snippets in Google search results *!*/
-/*.gs-snippet {*/
-/*display: none;*/
-/*}*/
-
-/*!* Change the font size of the title of search results *!*/
-/*.gs-title a {*/
-/*font-size: 16px;*/
-/*}*/
-
-/*!* Change the font size of snippets inside search results *!*/
-/*.gs-snippet {*/
-/*font-size: 14px;*/
-/*}*/
-
-/*!* Google Custom Search highlights matching words in bold, toggle that *!*/
-/*.gs-title b, .gs-snippet b {*/
-/*font-weight: normal;*/
-/*}*/
-
-/*!* Do no display the URL of web pages in search results *!*/
-/*.gsc-url-top, .gsc-url-bottom {*/
-/*display: none;*/
-/*}*/
-
-/*!* Highlight the pagination buttons at the bottom of search results *!*/
-/*.gsc-cursor-page {*/
-/*font-size: 1.5em;*/
-/*padding: 4px 8px;*/
-/*border: 2px solid #ccc;*/
-/*}*/
 
 /* Cavin's Custom */
-
 .gsc-control-cse {
     font-family: Arial, sans-serif;
     background-color: transparent;
@@ -586,8 +510,8 @@ table.ddw1 td {
 }
 
 .gsc-search-button-v2, .gsc-search-button-v2:hover {
-    font-size: 0px;
-    padding: 0px;
+    font-size: 0;
+    padding: 0;
     width: auto;
     vertical-align: middle;
     border-radius: 2px;
@@ -608,9 +532,9 @@ table.ddw1 td {
 
 input#gsc-i-id1.gsc-input {
     width: 100%;
-    padding: 0px;
+    padding: 0;
     border: none;
-    margin: -0.0625em 0px 0px;
+    margin: -0.0625em 0px 0;
     height: 1.25em;
     outline: none;
     background: none !important;
@@ -699,7 +623,6 @@ h2.card-sec-title::after {
     background-color: transparent;
     border-left: 0;
     color: #fff;
-    margin-bottom: 1em;
     font-size: 18px;
     line-height: 26px;
     margin: 15px 0;
@@ -726,10 +649,8 @@ h2.card-sec-title::after {
     border: none !important;
 }
 
-
-
 .cse .gsc-search-button-v2, .gsc-search-button-v2, .cse .gsc-search-button-v2:hover, .gsc-search-button-v2:hover {
-    font-size: 0px;
+    font-size: 0;
     padding: 0px !important;
     width: auto;
     vertical-align: middle;
@@ -768,9 +689,8 @@ h2.card-sec-title::after {
     color: #FFFFFF;
 }
 
-
 .gsc-search-button-v2 {
-    font-size: 0px;
+    font-size: 0;
     padding: 0;
     width: auto;
     vertical-align: middle;
@@ -788,8 +708,6 @@ h2.card-sec-title::after {
 .gsc-search-button-v2 svg {
     display: none;
 }
-
-
 
 /*------------------------------------------------
      CKeditor Attribute Styles
@@ -825,9 +743,24 @@ input[type='button']:hover {
     cursor: pointer;
 }
 
+ol.breadcrumb {
+    padding-left: 0;
+}
+
 /*------------------------------------------------
      Mobile
 ------------------------------------------------*/
+@media (max-width: 991px) {
+    .body-container * {
+        text-align: left;
+        margin: 0 5px;
+    }
+
+    h1.title {
+        visibility: hidden;
+    }
+}
+
 @media only screen and (min-width: 992px) {
     .col-quote {
         padding-left: 3em;
